--- a/subject.css
+++ b/subject.css
@@ -160,3 +160,15 @@ nav ul ul li {
 nav ul ul li a {
     line-height: 50px;
 }
+
+/* main */
+
+.video {
+    padding: 90px 17% 300px;
+    background-color: #aaaaaa;
+    height: 100vh;
+    width: 100%;
+}
+
+
+
